--- a/index.ipynb
+++ b/index.ipynb
@@ -1373,9 +1373,20 @@
     "#We could also flatten these:\n",
     "cols0 = group_df.columns.get_level_values(0)\n",
     "cols1 = group_df.columns.get_level_values(1)\n",
-    "group_df.columns = [col0 + '_' + col1 if col1 != '' else col0 for col0, col1 in list(zip(cols0, cols1))]\n",
-    "#The list comprehension above is more complicated then what we need but creates a nicer formatting and\n",
+    "\n",
+    "#The list comprehension below is more complicated then what we need but creates a nicer formatting and\n",
     "#demonstrates using a conditional within a list comprehension.\n",
+    "group_df.columns = [col0 + '_' + col1 if col1 != '' else col0 for col0, col1 in list(zip(cols0, cols1))]\n",
+    "\n",
+    "# >>> x = [1, 2, 3]\n",
+    "# >>> y = [4, 5, 6]\n",
+    "# >>> zipped = zip(x, y)\n",
+    "# >>> list(zipped)\n",
+    "# [(1, 4), (2, 5), (3, 6)]\n",
+    "# >>> x2, y2 = zip(*zip(x, y))\n",
+    "# >>> x == list(x2) and y == list(y2)\n",
+    "# True\n",
+    "\n",
     "#This simpler version works but has some tail underscores where col1 is blank:\n",
     "#grouped.columns = [col0 + '_' + col1 for col0, col1 in list(zip(cols0, cols1))]\n",
     "group_df.columns"
